--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-icons": "^4.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
+    "postcss-color-adjustment": "^0.1.6",
     "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
