--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
     "postcss-color-adjustment": "^0.1.6",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
